wp-content/themes/healthkart/assets/scss/_home.scss
/* ... */
.latest-articles {

	&-heading {
		font-weight: bold;
		font-size: 40px;
		line-height: 45px;
		font-weight: bold;
		margin:80px 0 40px;
		color: theme-color("dark-blue");
		@media (max-width: 768px) {
			font-size: 20px;
			margin:20px 0 10px;
		}
	}
	&-single {
		height: auto;
		background-color: theme-color("light-gray-1");
		padding-left: 0;
		padding-right: 0;
		display: flex;
		&-main {
			.latest-articles-single-content .content-title {
				.category {
					padding-bottom: 15px;
				}
				.title a {
					font-size: 35px;
					line-height: 45px;
					font-weight: bold;
					color: theme-color("dark-blue");
					@media (max-width: 768px) {
						font-size: 20px !important;
						line-height: 25px;
					}
				}
			}
			.latest-articles-single-image {
				img {
					height: 100%;
				}
				iframe {
					height: 100%;
				}
			}
		}
		&-image {
			width: 55%;
			iframe {
				height: 140px;
				width: 100%;
				@media (max-width: 991px) {
					height: 120px;
				}
				@media (max-width: 768px) {
					height: 250px;
				}
			}
			img {
				height: 140px;
				width: 100%;
				object-fit: cover;
				@media (max-width: 991px) {
					height: 120px;
				}
				@media (max-width: 768px) {
					height: auto;
				}
			}
		}
		&-content {
			padding: 88px 56px 86px 99px;
			width: 45%;
			.title {
				line-height: 22px !important;
				a {
					font-size: 16px;
					font-weight: 600;
					color: theme-color("dark-blue");
				}
			}
			.content-description {
				font-size: 20px;
				line-height: 32px;
				color: theme-color("dark-blue");
				@media (max-width: 991px) {
					font-size: 14px;
					line-height: 18px;
				}
			}
			@media (max-width: 768px) {
				padding: 36px 31px 36px 14px;
			}
		}
		&:nth-child(odd){
			.latest-articles-single-image{
				order:2;
			}
			.latest-articles-single-content{
				order:1;
			}
		}
		&:not(:last-child){
			margin-bottom: 20px;

			@media (max-width:768px){
				margin-bottom: 10px;
			}
		}
		@media (max-width:768px){
			flex-direction: column;
			height: auto;
			&-image, &-content{
				width: 100%;
			}
			&-image{
				order:2;
				img{
					height: 190px !important;
				}
			}
			&-content{
				order:1;
			}
		}
	}
	@media(max-width:768px){
		padding:0 16px;
	}
}
.transformation-section {
	&-single {
		&-image {
			@media (max-width: 767px) {
				a {
					flex-wrap: nowrap;
					justify-content: center;
					.transform {
						width: 100%;
					}
				}
			}
			img {
				height: 360px;
				width: 100%;
				object-fit: cover;
				object-position: top;
				@media (max-width: 767px) {
					height: auto;
				}
			}
			.img-tag {
				position: absolute;
				color: #fff;
				background-color: #212121;
				border-radius: 10px;
				border: 1px solid #707070;
				bottom: 10px;
				left: 20px;
				font-size: 18px;
				font-weight: bold;
			}
		}
		&-content {
			.content-title {
				.title {
					line-height: 24px;
					a {
						font-size: 21px;
						font-weight: 600;
						color: #000;
					}
					@media (min-width: 768px) {
						height: 55px;
					}
				}
			}
		}
		@media (max-width: 767px) {
			margin-bottom: 30px;
		}
	}
}
.transformation-section{
	.slick-slide {
		margin: 0 10px;
	  }
	  /* the parent */
	  .slick-list {
		margin: 0 -10px;
	  }
	&-single{
		&-image{
			position: relative;
			border-radius: 10px;
   			 overflow: hidden;
			.image-container{
				height: 413px;
				display: flex;
				.before-image, .after-image{
					img{
						height: 100%;
						object-fit: cover;
					}
				}
			}
			.slider-overlay{
				position: absolute;
    			background:linear-gradient(1deg, #2D3748 0%, #090B0E00 100%);
    			height: 100%;
    			width: 100%;
    			top: 0;
    			left: 0;
				opacity: 0.9;
			}
			.title{
				text-align: center;
				position: absolute;
				bottom: 33px;
				padding:0 20px;
				line-height: 24px;
				a{
					font-size: 20px;
					font-weight: bold;
					color: #FFFFFF;
				}
				@media(max-width:768px){
					bottom:21.5px;
					line-height: 16px;
					a{
						font-size: 12px;
					}
				}
			}
			@media(max-width:768px){
				.image-container{
					height: 267px;
					.after-image{
						width: 100%;
						img{
							width: 100%;
						}
					}

					.before-image{
						display: none;
					}
				}
			}
		}
	}
	@media(max-width: 768px){
		.slick-slide {
			margin: 0 5px;
		  }
		  /* the parent */
		  .slick-list {
			margin: 0 -5px;
		  }
	}
}
.content {
	&-title {
		.category a {
			color: #00bfbf;
			font-weight: 500;
			font-size: 14px;
			line-height: 18px;
		}
	}
	.title {
		line-height: 26px;
		a {
			line-height: 26px;
			font-weight: 600;
			color: black;
		}
	}
	&-fields {
		background-color: #212121;
		color: #fff;
		border-radius: 10px;
		font-size: 13px;
		font-weight: bolder;
		&-titles,
		&-values {
			@media (max-width: 767px) {
				flex-wrap: nowrap;
				label,
				span {
					&:first-child {
						display: none;
					}
				}
			}
		}
		@media (max-width: 767px) {
			margin-top: 15px;
		}
	}
}
/* ... */

